# BAMCP

./: .dockerignore  .gitignore  .pre-commit-config.yaml  BAMCP_Strategy.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  EVALS.md  EVAL_RESULTS.md  Makefile  README.md  SAFETY.md  SECURITY.md  dev_server.py  docker-compose.yml  pyproject.toml  run-bamcp.sh
.claude/skills/render-viewer/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  eval-nightly.yml  greenlight-build.yml  release.yml  security.yml
archived/: BAMCP_ENHANCEMENTS_PLAN.md  BAMCP_EVAL_HARNESS.md  BAMCP_IMPLEMENTATION_PLAN.md  STANDALONE_VIEWER_PLAN.md  TERRAFORM_PLAN.md
docker/: entrypoint.sh  healthcheck.py
scripts/: debug-container.sh  render_viewer.py  run_comparison.py  run_eval.py  setup-cloudflared.sh  setup-oci-secrets.sh
src/bamcp/: __init__.py  __main__.py  auth.py  cache.py  clinvar.py  config.py  constants.py  gnomad.py  parsers.py  ratelimit.py  reference.py  resources.py  server.py  tools.py
src/bamcp/analysis/: __init__.py  curation.py  evidence.py
src/bamcp/clients/: __init__.py  clinvar.py  genes.py  gnomad.py  ttl_cache.py
src/bamcp/core/: __init__.py  cache.py  parsers.py  reference.py  serialization.py  tools.py  validation.py
src/bamcp/eval/: __init__.py  cli.py  compare.py  grader.py  metrics.py  providers.py  render_cli.py  renderer.py  report.py  router.py  runner.py  schema.py  truthset.py
src/bamcp/middleware/: __init__.py  auth.py  security.py  telemetry.py
src/bamcp/static/: client.ts  constants.ts  data-store.ts  mcp-app.ts  package-lock.json  package.json  renderer.ts  state.ts  types.ts  viewer.html  vite.config.ts
tests/: conftest.py  create_fixtures.py  test_auth.py  test_cache.py  test_clinvar.py  test_config.py  test_docker.py  test_genes.py  test_gnomad.py  test_integration.py  test_parsers.py  test_ratelimit.py  test_reference.py  test_resources.py  test_security.py  test_security_headers.py  test_server.py  test_tools.py
tests/e2e/: conftest.py  test_viewer_e2e.py
tests/eval/: test_cases.yaml  test_truthset_smoke.py  vision_cases.yaml
tests/eval/datasets/giab/: GIAB_RESULTS.md  README.md  fetch_giab.py  manifest.yaml
tests/eval/datasets/synthetic_v1/: manifest.yaml
tests/fixtures/: comprehensive_ref.fa  comprehensive_ref.fa.fai  empty.bam  ref.fa  ref.fa.fai  small.bam  small.bam.bai
tests/integration/: test_docker.py  test_eval_cli.py  test_integration.py  test_server.py  test_viewer_renderer.py
tests/unit/analysis/: test_curation_rubric.py  test_curation_safety.py
tests/unit/clients/: test_clinvar.py  test_genes.py  test_gnomad.py
tests/unit/core/: test_cache.py  test_config.py  test_parsers.py  test_reference.py  test_tools.py  test_validation.py
tests/unit/eval/: conftest.py  test_cli.py  test_compare.py  test_giab_fetch.py  test_grader.py  test_metrics.py  test_providers.py  test_render_cli.py  test_report.py  test_router.py  test_runner.py  test_schema.py  test_truthset.py  test_vision_paths.py
tests/unit/middleware/: test_auth.py  test_ratelimit.py  test_security_headers.py  test_telemetry.py
