[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bamcp"
version = "0.1.0"
description = "Interactive BAM/CRAM variant visualization for AI assistants via the Model Context Protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "BAMCP Contributors" },
]
keywords = ["mcp", "bam", "cram", "genomics", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "mcp>=1.0.0",
    "pysam>=0.22.0",
    "uvicorn>=0.29",
]

[project.scripts]
bamcp = "bamcp.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "pytest-playwright>=0.4.0",
    "playwright>=1.40",
    "ruff>=0.11",
    "mypy>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bamcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# E2E tests use Playwright's sync API which conflicts with pytest-asyncio's
# event loop. Run E2E separately: pytest tests/e2e/
addopts = "--ignore=tests/e2e --cov=bamcp --cov-report=term-missing"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end Playwright tests (run separately: pytest tests/e2e/)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S104", "S105", "S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["bamcp"]

[tool.coverage.report]
show_missing = true
fail_under = 80
